syntax = "proto3";

option csharp_namespace = "Generated";

message HoroscopResponse
{ 
    string sign = 1;
}